[gd_scene load_steps=12 format=3 uid="uid://hhqwmasht63"]

[ext_resource type="Texture2D" uid="uid://dcspl0gwqiat3" path="res://assets/background.jpg" id="1_1ej2j"]
[ext_resource type="PackedScene" uid="uid://djr8mwf102w0i" path="res://scenes/player/player.tscn" id="1_nkgis"]
[ext_resource type="Script" path="res://scenes/level.gd" id="1_y7tum"]
[ext_resource type="Texture2D" uid="uid://xt3qlaowm6i" path="res://assets/footer.png" id="4_w2vgj"]
[ext_resource type="Texture2D" uid="uid://b2tqsmfmd32v0" path="res://assets/top.png" id="5_8ehq4"]
[ext_resource type="Texture2D" uid="uid://ds7p5fn3co5wg" path="res://assets/kuma.png" id="6_h5ae4"]
[ext_resource type="Script" path="res://Kuma.gd" id="6_m331u"]
[ext_resource type="PackedScene" uid="uid://c6llecsoohpli" path="res://user_interface/ui.tscn" id="8_nec6c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mxwke"]
size = Vector2(1203, 75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d8xce"]
size = Vector2(106, 116)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kmuc1"]
size = Vector2(474.004, 508)

[node name="Level" type="Node2D"]
script = ExtResource("1_y7tum")

[node name="Bg" type="Sprite2D" parent="."]
position = Vector2(480, 357)
scale = Vector2(0.242246, 0.242246)
texture = ExtResource("1_1ej2j")

[node name="Player" parent="." instance=ExtResource("1_nkgis")]

[node name="Ground" type="StaticBody2D" parent="."]
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(591.5, 665.5)
shape = SubResource("RectangleShape2D_mxwke")

[node name="Cesta" type="Area2D" parent="."]
position = Vector2(1074, 535)
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cesta"]
position = Vector2(-0.999878, 9)
rotation = 1.5708
shape = SubResource("RectangleShape2D_d8xce")

[node name="StaticBody2D" type="StaticBody2D" parent="Cesta"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Cesta/StaticBody2D"]
polygon = PackedVector2Array(-66, -64, -71, -65, -74, -63, -72, -57, -72, -49, -66, -45, -65, 49, -63, 59, -56, 67, -48, 72, 48, 72, 59, 65, 65, 53, 65, -44, 70, -47, 70, -54, 71, -62, 70, -65, 64, -64, 63, -50, 56, -43, 56, 51, 52, 58, 45, 62, -42, 63, -51, 59, -56, 50, -56, -45, -65, -50)

[node name="Cesta" type="Sprite2D" parent="Cesta"]
position = Vector2(5.72205e-06, 4.00002)
scale = Vector2(0.403727, 0.428571)
texture = ExtResource("4_w2vgj")

[node name="Top" type="Sprite2D" parent="Cesta"]
z_index = 2
position = Vector2(-1.22728, -54)
scale = Vector2(0.418182, 0.418182)
texture = ExtResource("5_8ehq4")

[node name="EndPointKuma" type="Marker2D" parent="."]
position = Vector2(1073, 435)

[node name="StartPointKuma2" type="Marker2D" parent="."]
position = Vector2(1073, 100)

[node name="Kuma" type="CharacterBody2D" parent="."]
position = Vector2(1073.12, 435.375)
script = ExtResource("6_m331u")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Kuma"]
polygon = PackedVector2Array(-69.124, 34.625, -70.124, 29.625, -68.124, 23.625, -60.124, 19.625, -54.124, 19.625, -38.124, 20.625, -30.124, 19.625, -2.12402, 17.625, 28.876, 19.625, 34.876, 20.625, 52.876, 19.625, 60.876, 19.625, 67.876, 23.625, 69.876, 26.625, 69.876, 30.625, 68.876, 34.625)

[node name="Kuma" type="Sprite2D" parent="Kuma"]
position = Vector2(-0.00012207, 0)
scale = Vector2(0.177195, 0.177195)
texture = ExtResource("6_h5ae4")

[node name="Timer" type="Timer" parent="Kuma"]
one_shot = true

[node name="Area2D" type="Area2D" parent="Kuma"]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kuma/Area2D"]
position = Vector2(-171.122, 270.625)
shape = SubResource("RectangleShape2D_kmuc1")

[node name="UI" parent="." instance=ExtResource("8_nec6c")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(641, 366)

[connection signal="last_position_pointer" from="Player" to="." method="_on_player_last_position_pointer"]
[connection signal="body_entered" from="Cesta" to="." method="_on_cesta_body_entered"]
[connection signal="timeout" from="Kuma/Timer" to="Kuma" method="_on_timer_timeout"]
[connection signal="body_entered" from="Kuma/Area2D" to="Kuma" method="_on_area_2d_body_entered"]
